--- a/LayoutTests/inspector/elements/styles/styles-add-new-rule.html
+++ b/LayoutTests/inspector/elements/styles/styles-add-new-rule.html
@@ -59,9 +59,39 @@ function test()
     {
         InspectorTest.addResult("After adding new rule (other):");
         InspectorTest.dumpSelectedElementStyles(true, false, true);
-        InspectorTest.completeTest();
+
+        InspectorTest.waitForStylesForClass("my-class", onStylesReceived);
+        InspectorTest.nodeWithClass("my-class", onNodeFound);
+        function onNodeFound(node)
+        {
+            WebInspector.Revealer.reveal(node);
+        }
+
+        function onStylesReceived()
+        {
+            InspectorTest.addNewRule(null, step6);
+        }
     }
 
+    function step6()
+    {
+        InspectorTest.dumpSelectedElementStyles(true, false, true);
+
+        InspectorTest.waitForStylesForClass("class-1", onStylesReceived);
+        InspectorTest.nodeWithClass("class-1", onNodeFound);
+        function onNodeFound(node)
+        {
+            WebInspector.Revealer.reveal(node);
+        }
+
+        function onStylesReceived()
+        {
+            InspectorTest.addNewRule(null, function() {
+                InspectorTest.dumpSelectedElementStyles(true, false, true);
+                InspectorTest.completeTest();
+            });
+        }
+    }
     function revisionAdded(revision)
     {
         InspectorTest.addResult("Revision added: " + this.displayName());
@@ -78,6 +108,13 @@ Tests that adding a new rule works after switching nodes.
 
 <div id="inspected" style="font-size: 12px">Text</div>
 <div id="other" style="color:red"></div>
+<div>
+    <div class="my-class"></div>
+    <div class="my-class"></div>
+    <div class="my-class"></div>
+</div>
+
+<div class=" class-1 class-2  class-3   "></div>
 
 </body>
 </html>
