DevTools: defer styles delta calculation to until the end of the task.
BUG=289708
R=vsevik@chromium.org

Review URL: https://codereview.chromium.org/201363002

git-svn-id: svn://svn.chromium.org/blink/trunk@169371 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/elements/styles/add-new-rule-with-style-after-body.html
+++ b/LayoutTests/inspector/elements/styles/add-new-rule-with-style-after-body.html
@@ -13,10 +13,12 @@ function addStyle()
 function test()
 {
     WebInspector.inspectorView.showPanel("elements");
-    InspectorTest.evaluateInPage("addStyle()", step0);
+    WebInspector.cssModel.addEventListener(WebInspector.CSSStyleModel.Events.StyleSheetAdded, stylesheetAdded);
+    InspectorTest.evaluateInPage("addStyle()");
 
-    function step0()
+    function stylesheetAdded()
     {
+        WebInspector.cssModel.removeEventListener(WebInspector.CSSStyleModel.Events.StyleSheetAdded, stylesheetAdded);
         InspectorTest.selectNodeAndWaitForStyles("inspected", step1);
     }
 
