--- a/LayoutTests/http/tests/inspector/elements/styles/edit-css-with-source-url.html
+++ b/LayoutTests/http/tests/inspector/elements/styles/edit-css-with-source-url.html
@@ -33,12 +33,6 @@ function test()
         {
             var styleText = "#inspected {\n    color: red;\n}\n";
 
-            function loadStylesheet(callback)
-            {
-                InspectorTest.addResult("Loading stylesheet with sourceURL:");
-                InspectorTest.evaluateInPage("loadStylesheet()", callback);
-            }
-
             function dumpUISourceCodeContents()
             {
                 InspectorTest.addResult("Dumping uiSourceCode content:");
@@ -60,11 +54,14 @@ function test()
             function didShowScriptSource(sourceFrame)
             {
                 dumpUISourceCodeContents();
-                loadStylesheet(stylesheetLoaded);
+                InspectorTest.addResult("Loading stylesheet with sourceURL:");
+                WebInspector.cssModel.addEventListener(WebInspector.CSSStyleModel.Events.StyleSheetAdded, stylesheetLoaded);
+                InspectorTest.evaluateInPage("loadStylesheet()");
             }
   
             function stylesheetLoaded()
             {
+                WebInspector.cssModel.removeEventListener(WebInspector.CSSStyleModel.Events.StyleSheetAdded, stylesheetLoaded);
                 InspectorTest.addResult("Stylesheet loaded.");
                 WebInspector.inspectorView.showPanel("elements");
                 InspectorTest.selectNodeAndWaitForStyles("inspected", nodeSelected);
