Remove testRunner.display calls from table border collapsing tests
Tables cache data related to border collapsing to optimize paint calls
as the border collapsing logic can be slow. These layout tests make
sure that we correctly invalidate and recompute this cache in response
to various style/DOM changes, so they need to run some code to set up
the scene, go through the paint path to set up the cache, then
invalidate the cache by causing further mutations.  This uses the
runAfterDisplay harness to run the second part of the test after
painting instead of invoking testRunner.display() directly.

Since the table border collapsing logic doesn't directly involve
repaint invalidations, this doesn't attempt to preserve the
invalidation data. Invalidations on table changes should be covered by
other tests.

BUG=345027

Review URL: https://codereview.chromium.org/196573021

git-svn-id: svn://svn.chromium.org/blink/trunk@169378 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/table/border-collapsing/cached-cell-append.html
+++ b/LayoutTests/fast/table/border-collapsing/cached-cell-append.html
@@ -6,16 +6,20 @@ Here we append new cell, expect that cache is invalidated and paint produces exp
     <head>
         <title></title>
         <link rel="stylesheet" href="resources/cached.css">
+        <script src="../../../resources/run-after-display.js"></script>
         <script type="text/javascript">
             function test() {
-                document.body.offsetTop;
                 if (window.testRunner)
-                    testRunner.display();
-                newCell = document.createElement("td");
-                newCell.style.borderLeftWidth = "6px";
-                newCell.style.borderLeftStyle = "solid";
-                newCell.style.borderLeftColor = "yellow";
-                document.getElementById("row").appendChild(newCell);
+                    testRunner.waitUntilDone();
+                runAfterDisplay(function() {
+                    newCell = document.createElement("td");
+                    newCell.style.borderLeftWidth = "6px";
+                    newCell.style.borderLeftStyle = "solid";
+                    newCell.style.borderLeftColor = "yellow";
+                    document.getElementById("row").appendChild(newCell);
+                    if (window.testRunner)
+                        testRunner.notifyDone();
+                });
             }
         </script>
     </head>
