--- a/LayoutTests/fast/table/border-collapsing/cached-69296.html
+++ b/LayoutTests/fast/table/border-collapsing/cached-69296.html
@@ -4,6 +4,7 @@ Collapsed borders should not disappear.
 -->
 <html>
     <head>
+        <script src="../../../resources/run-after-display.js"></script>
         <style>
             BODY {
                 margin: 20px;
@@ -24,18 +25,18 @@ Collapsed borders should not disappear.
     <head>
         <script type="text/javascript">
             function test() {
-                document.body.offsetTop;
-                if (window.testRunner) {
-                    testRunner.display();
-                }
-                if (window.eventSender) {
-                    row = document.getElementById('row1');
-                    rowRect = row.getBoundingClientRect();
-                    x = rowRect.left + 75;
-                    y = rowRect.top;
-                    eventSender.mouseMoveTo(x, y + 1);
-                    eventSender.mouseMoveTo(x, y - 1);
-                    document.body.offsetTop;
+                if (window.eventSender && window.testRunner) {
+                    testRunner.waitUntilDone();
+                    runAfterDisplay(function() {
+                        row = document.getElementById('row1');
+                        rowRect = row.getBoundingClientRect();
+                        x = rowRect.left + 75;
+                        y = rowRect.top;
+                        eventSender.mouseMoveTo(x, y + 1);
+                        eventSender.mouseMoveTo(x, y - 1);
+                        document.body.offsetTop;
+                        testRunner.notifyDone();
+                    });
                 }
             }
         </script>
