--- a/LayoutTests/fast/table/border-collapsing/cached-cell-remove.html
+++ b/LayoutTests/fast/table/border-collapsing/cached-cell-remove.html
@@ -6,13 +6,17 @@ Here we remove cell, expect that cache is invalidated and paint produces expecte
     <head>
         <title></title>
         <link rel="stylesheet" href="resources/cached.css">
+        <script src="../../../resources/run-after-display.js"></script>
         <script type="text/javascript">
             function test() {
-                document.body.offsetTop;
                 if (window.testRunner)
-                    testRunner.display();
-                barCell = document.getElementById("bar");
-                document.getElementById("row").removeChild(barCell);
+                    testRunner.waitUntilDone();
+                runAfterDisplay(function() {
+                    barCell = document.getElementById("bar");
+                    document.getElementById("row").removeChild(barCell);
+                    if (window.testRunner)
+                        testRunner.notifyDone();
+                });
             }
         </script>
     </head>
