--- a/LayoutTests/fast/table/border-collapsing/cached-change-cell-sl-border-color.html
+++ b/LayoutTests/fast/table/border-collapsing/cached-change-cell-sl-border-color.html
@@ -8,16 +8,20 @@ Here we:
     <head>
         <title></title>
         <link rel="stylesheet" href="resources/cached.css">
+        <script src="../../../resources/run-after-display.js"></script>
         <script type="text/javascript">
             function test() {
-                document.body.offsetTop;
                 if (window.testRunner)
-                    testRunner.display();
-                // remove text, this requests layout for DIV,
-                // but only simplified layout for TABLE
-                document.getElementById("blockDiv").innerText = "";
-                // change color, no layout for TABLE, only repaint
-                document.getElementById("foo").style.borderColor = "lime";
+                    testRunner.waitUntilDone();
+                runAfterDisplay(function() {
+                    // remove text, this requests layout for DIV,
+                    // but only simplified layout for TABLE
+                    document.getElementById("blockDiv").innerText = "";
+                    // change color, no layout for TABLE, only repaint
+                    document.getElementById("foo").style.borderColor = "lime";
+                    if (window.testRunner)
+                        testRunner.notifyDone();
+                });
             }
         </script>
     </head>
