--- a/LayoutTests/fast/table/border-collapsing/cached-change-colgroup-border-color.html
+++ b/LayoutTests/fast/table/border-collapsing/cached-change-colgroup-border-color.html
@@ -6,12 +6,16 @@ Here we change colgroup border color, expect that cache is invalidated and paint
     <head>
         <title></title>
         <link rel="stylesheet" href="resources/cached.css">
+        <script src="../../../resources/run-after-display.js"></script>
         <script type="text/javascript">
             function test() {
-                document.body.offsetTop;
                 if (window.testRunner)
-                    testRunner.display();
-                document.getElementById("colgroup").style.borderColor = "yellow";
+                    testRunner.waitUntilDone();
+                runAfterDisplay(function() {
+                    document.getElementById("colgroup").style.borderColor = "yellow";
+                    if (window.testRunner)
+                        testRunner.notifyDone();
+                });
             }
         </script>
     </head>
