--- a/PerformanceTests/Canvas/upload-canvas-2d-to-texture.html
+++ b/PerformanceTests/Canvas/upload-canvas-2d-to-texture.html
@@ -9,7 +9,7 @@ var ctx2D = canvas2D.getContext("2d");
 var canvas3D = document.createElement('canvas');
 var gl = canvas3D.getContext('experimental-webgl');
 if(!gl)
-    PerfTestRunner.log("\nWebGL is not supported or enabled on this platform!\n");
+    PerfTestRunner.logFatalError("\nWebGL is not supported or enabled on this platform!\n");
 var MEASURE_DRAW_TIMES = 1000;
 var MAX_COUNT = 60000;
 var count = 0;
@@ -31,22 +31,19 @@ function fillCanvas(ctx2d, canvas2d) {
 }
 
 function uploadCanvas2DToWebGLTexture() {
-    if (gl) {
-        var tex = gl.createTexture();
-        gl.bindTexture(gl.TEXTURE_2D, tex);
+    var tex = gl.createTexture();
+    gl.bindTexture(gl.TEXTURE_2D, tex);
 
-        var start = PerfTestRunner.now();
-        for (var i = 0; i < MEASURE_DRAW_TIMES; i++) {
-            gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, canvas2D);
-        }
-        gl.readPixels(0, 0, 1, 1, gl.RGBA, gl.UNSIGNED_BYTE, new Uint8Array(4));
-        gl.deleteTexture(tex);
-        count++;
+    var start = PerfTestRunner.now();
+    for (var i = 0; i < MEASURE_DRAW_TIMES; i++) {
+        gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, canvas2D);
+    }
+    gl.readPixels(0, 0, 1, 1, gl.RGBA, gl.UNSIGNED_BYTE, new Uint8Array(4));
+    gl.deleteTexture(tex);
+    count++;
 
-        var elapsedTime = PerfTestRunner.now() - start;
-        PerfTestRunner.measureValueAsync(MEASURE_DRAW_TIMES * 1000 / elapsedTime);
-    } else
-        PerfTestRunner.measureValueAsync(0);
+    var elapsedTime = PerfTestRunner.now() - start;
+    PerfTestRunner.measureValueAsync(MEASURE_DRAW_TIMES * 1000 / elapsedTime);
     if (count < MAX_COUNT)
         requestAnimationFrame(uploadCanvas2DToWebGLTexture);
 }
