--- a/PerformanceTests/Canvas/upload-webgl-to-texture.html
+++ b/PerformanceTests/Canvas/upload-webgl-to-texture.html
@@ -9,7 +9,7 @@ var sourceCtx = sourceCanvas3D.getContext('experimental-webgl');
 var destCanvas3D = document.createElement('canvas');
 var destCtx = destCanvas3D.getContext('experimental-webgl');
 if (!sourceCtx || !destCtx)
-    PerfTestRunner.log("\nWebGL is not supported or enabled on this platform!\n");
+    PerfTestRunner.logFatalError("\nWebGL is not supported or enabled on this platform!\n");
 var MEASURE_DRAW_TIMES = 100;
 var MAX_COUNT = 60000;
 var count = 0;
@@ -35,23 +35,20 @@ function renderWebGL(gl) {
 }
 
 function uploadWebGLToWebGLTexture() {
-    if (sourceCtx && destCtx) {
-        var tex = destCtx.createTexture();
-        destCtx.bindTexture(destCtx.TEXTURE_2D, tex);
+    var tex = destCtx.createTexture();
+    destCtx.bindTexture(destCtx.TEXTURE_2D, tex);
 
-        var start = PerfTestRunner.now();
+    var start = PerfTestRunner.now();
 
-        for (var i = 0; i < MEASURE_DRAW_TIMES; i++) {
-            destCtx.texImage2D(destCtx.TEXTURE_2D, 0, destCtx.RGBA, destCtx.RGBA, destCtx.UNSIGNED_BYTE, sourceCanvas3D);
-        }
-        destCtx.readPixels(0, 0, 1, 1, sourceCtx.RGBA, sourceCtx.UNSIGNED_BYTE, new Uint8Array(4));
-        destCtx.deleteTexture(tex);
-        count++;
+    for (var i = 0; i < MEASURE_DRAW_TIMES; i++) {
+        destCtx.texImage2D(destCtx.TEXTURE_2D, 0, destCtx.RGBA, destCtx.RGBA, destCtx.UNSIGNED_BYTE, sourceCanvas3D);
+    }
+    destCtx.readPixels(0, 0, 1, 1, sourceCtx.RGBA, sourceCtx.UNSIGNED_BYTE, new Uint8Array(4));
+    destCtx.deleteTexture(tex);
+    count++;
 
-        var elapsedTime = PerfTestRunner.now() - start;
-        PerfTestRunner.measureValueAsync(MEASURE_DRAW_TIMES * 1000 / elapsedTime);
-    } else
-        PerfTestRunner.measureValueAsync(0);
+    var elapsedTime = PerfTestRunner.now() - start;
+    PerfTestRunner.measureValueAsync(MEASURE_DRAW_TIMES * 1000 / elapsedTime);
     if (count < MAX_COUNT)
         requestAnimationFrame(uploadWebGLToWebGLTexture);
 }
@@ -64,8 +61,7 @@ window.onload = function () {
     PerfTestRunner.prepareToMeasureValuesAsync({done: onCompletedRun, unit: 'runs/s',
         description: "This benchmark checks the speed on uploading WebGL(1024x1024) to WebGL Texture(1024x1024)."});
     setSize(1024, 1024);
-    if (sourceCtx)
-        renderWebGL(sourceCtx);
+    renderWebGL(sourceCtx);
     uploadWebGLToWebGLTexture();
 }
 
