Remove the ability to lock to multiple orientations.
This is following the latest changes from the specification.

BUG=162827

Review URL: https://codereview.chromium.org/200893004

git-svn-id: svn://svn.chromium.org/blink/trunk@169381 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/screen_orientation/lockOrientation-bad-argument.html
+++ b/LayoutTests/screen_orientation/lockOrientation-bad-argument.html
@@ -9,7 +9,7 @@ window.jsTestIsAsync = true;
 function onOrientationChangeEvent(ev) {
     testFailed("Unexpected 'orientationchange' event");
 }
- 
+
 function completeTest() {
     shouldBeEqualToString("screen.orientation", "portrait-primary");
     screen.unlockOrientation();
@@ -28,6 +28,8 @@ shouldBeEqualToString("screen.orientation", "portrait-primary");
 shouldBeFalse("screen.lockOrientation(123)");
 shouldBeEqualToString("screen.orientation", "portrait-primary");
 shouldBeFalse("screen.lockOrientation(window)");
+shouldBeEqualToString("screen.orientation", "portrait-primary");
+shouldBeFalse("screen.lockOrientation(['portrait-primary', 'landscape-primary'])");
 shouldBeEqualToString("screen.orientation", "portrait-primary");
 shouldThrow("screen.lockOrientation()", '"TypeError: Failed to execute \'lockOrientation\' on \'Screen\': 1 argument required, but only 0 present."');
 
