Revert 169371 "DevTools: defer styles delta calculation to until..."
This is in order to revert 169354, which caused a crash on ASAN bot.

See crbug.com/353257

> DevTools: defer styles delta calculation to until the end of the task.
> 
> BUG=289708
> R=vsevik@chromium.org
> 
> Review URL: https://codereview.chromium.org/201363002

TBR=pfeldman@chromium.org

Review URL: https://codereview.chromium.org/196743008

git-svn-id: svn://svn.chromium.org/blink/trunk@169388 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/http/tests/inspector/elements/styles/edit-css-with-source-url.html
+++ b/LayoutTests/http/tests/inspector/elements/styles/edit-css-with-source-url.html
@@ -33,6 +33,12 @@ function test()
         {
             var styleText = "#inspected {\n    color: red;\n}\n";
 
+            function loadStylesheet(callback)
+            {
+                InspectorTest.addResult("Loading stylesheet with sourceURL:");
+                InspectorTest.evaluateInPage("loadStylesheet()", callback);
+            }
+
             function dumpUISourceCodeContents()
             {
                 InspectorTest.addResult("Dumping uiSourceCode content:");
@@ -54,14 +60,11 @@ function test()
             function didShowScriptSource(sourceFrame)
             {
                 dumpUISourceCodeContents();
-                InspectorTest.addResult("Loading stylesheet with sourceURL:");
-                WebInspector.cssModel.addEventListener(WebInspector.CSSStyleModel.Events.StyleSheetAdded, stylesheetLoaded);
-                InspectorTest.evaluateInPage("loadStylesheet()");
+                loadStylesheet(stylesheetLoaded);
             }
   
             function stylesheetLoaded()
             {
-                WebInspector.cssModel.removeEventListener(WebInspector.CSSStyleModel.Events.StyleSheetAdded, stylesheetLoaded);
                 InspectorTest.addResult("Stylesheet loaded.");
                 WebInspector.inspectorView.showPanel("elements");
                 InspectorTest.selectNodeAndWaitForStyles("inspected", nodeSelected);
