DevTools: fix author shadow dom inspection mode, speacial-case ua. Fix crash from the bug.
R=apavlov
BUG=353016

Review URL: https://codereview.chromium.org/197283031

git-svn-id: svn://svn.chromium.org/blink/trunk@169441 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/inspector/elements/breadcrumb-shadow-roots.html
+++ b/LayoutTests/inspector/elements/breadcrumb-shadow-roots.html
@@ -16,7 +16,7 @@ function loaded()
 function test()
 {
     WebInspector.inspectorView.showPanel("elements");
-    WebInspector.settings.showShadowDOM.set(true);
+    WebInspector.settings.showUAShadowDOM.set(true);
     InspectorTest.expandElementsTree(step0);
 
     function step0()
