--- a/LayoutTests/http/tests/inspector/template-content-inspect-crash.html
+++ b/LayoutTests/http/tests/inspector/template-content-inspect-crash.html
@@ -14,8 +14,6 @@ function test()
         window.testRunner.setAllowUniversalAccessFromFileURLs(false);
     }
 
-    WebInspector.settings.showShadowDOM.set(true);
-
     InspectorTest.expandElementsTree(function() {
         var contentNode = InspectorTest.expandedNodeWithId("tpl").templateContent();
         WebInspector.panels.elements.selectDOMNode(contentNode, true);
@@ -37,7 +35,7 @@ function test()
 
 <template id="tpl">
     <div>Hello!</div>
-</div>
+</template>
 
 </body>
 </html>
