--- a/LayoutTests/inspector/console/shadow-element.html
+++ b/LayoutTests/inspector/console/shadow-element.html
@@ -6,7 +6,7 @@
 
 function test()
 {
-    WebInspector.settings.showShadowDOM.set(true);
+    WebInspector.settings.showUAShadowDOM.set(true);
     InspectorTest.selectNodeWithId("shadow", step1);
 
     function step1()
