--- a/LayoutTests/inspector/elements/shadow-dom-modify-chardata.html
+++ b/LayoutTests/inspector/elements/shadow-dom-modify-chardata.html
@@ -16,7 +16,7 @@ function typeText()
 function test()
 {
     var containerNode;
-    WebInspector.settings.showShadowDOM.set(true);
+    WebInspector.settings.showUAShadowDOM.set(true);
     InspectorTest.runTestSuite([
         function testDumpInitial(next)
         {
