Web Animations: Allow animations with delay to start on compositor
This patch ensures layers are created for any current animation (an
animation that has yet to play, or is playing) which should also
composite.

Previously layers were only created for animations once they had applied
an effect to the style (opacity, transform, ...), but this is too late
to allow a compositor animation to start when the animation specifies a
delay.

This change appeared to allow several hacks to be cleaned up as it's no
longer necessary to massage the interpolation output for opacity and
transform in order to ensure layer creation. However this is actually
required for transforms[1]. Tests and comments updated to clarify.

[1] http://www.w3.org/TR/css-transforms-1/#none-transform-animation
BUG=321926, 344809

Review URL: https://codereview.chromium.org/189883003

git-svn-id: svn://svn.chromium.org/blink/trunk@169448 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/transitions/negative-delay.html
+++ b/LayoutTests/transitions/negative-delay.html
@@ -50,7 +50,7 @@
       [0.5, "square1", "left", 450, 15],
       [0.5, "square2", "left", 150, 15],
       [0.0, "square3", "-webkit-transform.4", 300, 20],
-      [0.0, "square4", "-webkit-transform.4", 'none', 20],
+      [0.0, "square4", "-webkit-transform.4",   0, 20],
       [0.5, "square3", "-webkit-transform.4", 450, 20],
       [0.5, "square4", "-webkit-transform.4", 150, 20],
     ];
