Fix crash in 2D canvas drawSystemFocusRing with invalid argument.
Added missing null ptr check.

BUG=353248

Review URL: https://codereview.chromium.org/203293005

git-svn-id: svn://svn.chromium.org/blink/trunk@169468 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/fast/canvas/draw-system-focus-ring.html
+++ b/LayoutTests/fast/canvas/draw-system-focus-ring.html
@@ -15,10 +15,16 @@ if (window.testRunner)
 document.getElementById("button1").focus();
 
 var canvas = document.getElementById("canvas").getContext("2d");
+
+shouldNotThrow('canvas.drawSystemFocusRing(null);');
+shouldThrow('canvas.drawSystemFocusRing();');
+
 canvas.beginPath();
 canvas.rect(50, 50, 200, 100);
 canvas.fillStyle = "#ccf";
 canvas.fill();
+// re-test null case after having defined a path (regression test for crbug.com/353248)
+shouldNotThrow('canvas.drawSystemFocusRing(null);');
 canvas.drawSystemFocusRing(document.getElementById("button1"));
 
 canvas.beginPath();
