--- a/LayoutTests/fast/forms/suggested-value.html
+++ b/LayoutTests/fast/forms/suggested-value.html
@@ -4,7 +4,7 @@
 <p id="description">This test setting suggested values on an input element 
 and a textarea element. The dump below should have the "suggested value"
 instead of "initial value".</p>
-<pre><input id="test" type="text" value="initial value"><input id="month" type="month"><textarea id="textarea"></textarea></pre>
+<pre><input id="test" type="text" value="initial value"><input id="month" type="month"><textarea id="textarea"></textarea><select id="select"><option>CA</option><option>TX</option></select></pre>
 <script src="../../resources/dump-as-markup.js"></script>
 <script>
 
@@ -12,6 +12,8 @@ var input = document.getElementById('test');
 var month = document.getElementById('month');
 var textarea = document.getElementById('textarea');
 textarea.value = "initial value";
+var select = document.getElementById('select');
+select.selectedIndex = -1;
 var result = document.getElementById('result');
 if (!window.internals)
     testFailed('This test requires internals object');
@@ -22,6 +24,7 @@ else {
     internals.setSuggestedValue(input, 'suggested value');
     internals.setSuggestedValue(month, '2014-01');
     internals.setSuggestedValue(textarea, 'suggested value');
+    internals.setSuggestedValue(select, 'TX');
 
     Markup.description(document.getElementById('description').textContent)
 
@@ -34,7 +37,9 @@ else {
     addTextResult('internals.suggestedValue(month)');
     addTextResult('textarea.value');
     addTextResult('internals.suggestedValue(textarea)');
-    
+    addTextResult('select.value');
+    addTextResult('internals.suggestedValue(select)');
+
     Markup.dump(input.parentNode);
 }
 
