Remove display() from compositing/ LayoutTests
This cleans up the remaining compositing/ display() calls, other than
two tricky cases (squash-animated-gif.html and
video-with-invalid-source.html) which are in different CLs for ease of
review and landing.

BUG=345027

Review URL: https://codereview.chromium.org/196653012

git-svn-id: svn://svn.chromium.org/blink/trunk@169478 bbb929c8-8fbe-4397-9dbb-9b2b20218538

--- a/LayoutTests/compositing/gestures/gesture-tapHighlight-1-overflow-div-scrolled-late-noncomposite.html
+++ b/LayoutTests/compositing/gestures/gesture-tapHighlight-1-overflow-div-scrolled-late-noncomposite.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <script src="../../resources/js-test.js"></script>
+<script src="../../resources/run-after-display.js"></script>
 <link rel="stylesheet" type="text/css" href="resources/link-highlight-style.css">
 </head>
 <body onload="runTest();">
@@ -34,13 +35,13 @@ function runTest() {
     // be displayed correctly after all these operations.
     if (window.eventSender && window.testRunner) {
         eventSender.gestureShowPress(x, y);
-        window.testRunner.display();
-
-        document.getElementById('divToControlCompositedLayer').style.webkitTransform = "";
-        window.testRunner.display();
-
-        targetDiv.scrollTop += 20;
-        window.setTimeout(function() { window.testRunner.notifyDone(); }, 0);
+        runAfterDisplay(function() {
+            document.getElementById('divToControlCompositedLayer').style.webkitTransform = "";
+            runAfterDisplay(function() {
+                targetDiv.scrollTop += 20;
+                testRunner.notifyDone();
+            });
+        });
     } else {
         debug("This test requires DumpRenderTree.");
     }
