--- a/LayoutTests/compositing/gestures/gesture-tapHighlight-1-overflow-div-scrolled-late-composite.html
+++ b/LayoutTests/compositing/gestures/gesture-tapHighlight-1-overflow-div-scrolled-late-composite.html
@@ -17,6 +17,7 @@
 <div style="position: relative; left: 10px; top: 80px">
 This test is successful if "Target Link" above is covered in a green rectangle with rounded corners.
 </div>
+<script src="../../resources/run-after-display.js"></script>
 <script>
 function runTest() {
     var targetDiv = document.getElementById('targetDiv');
@@ -32,16 +33,15 @@ function runTest() {
     // then scrolls that div, then exits. If everything is working correctly, the link highlight will still
     // be displayed correctly after all these operations.
     if (window.eventSender && window.testRunner) {
-
         eventSender.gestureShowPress(x, y);
-        window.testRunner.display();
-
-        document.getElementById('divToForceCompositedLayer').style.webkitTransform = 'translateZ(0)';
-        document.body.offsetTop;
-        window.testRunner.display();
-
-        targetDiv.scrollTop += 20;
-        window.setTimeout(function() { window.testRunner.notifyDone(); }, 0);
+        runAfterDisplay(function() {
+            document.getElementById('divToForceCompositedLayer').style.webkitTransform = 'translateZ(0)';
+            document.body.offsetTop;
+            runAfterDisplay(function() {
+                targetDiv.scrollTop += 20;
+                testRunner.notifyDone();
+            });
+        });
     } else {
         debug("This test requires DumpRenderTree.");
     }
