--- a/LayoutTests/compositing/gestures/gesture-tapHighlight-simple-navigate.html
+++ b/LayoutTests/compositing/gestures/gesture-tapHighlight-simple-navigate.html
@@ -10,6 +10,7 @@
 <div style="position: relative; left: 10px; top: 70px; -webkit-transform: translateZ(0);">
 This test is not successful if this message appears.
 </div>
+<script src="../../resources/run-after-display.js"></script>
 <script>
 function runTest() {
     var clientRect = document.getElementById('targetLink').getBoundingClientRect();
@@ -21,8 +22,12 @@ function runTest() {
     if (window.eventSender) {
         eventSender.gestureShowPress(x, y);
         // Force display of highlight before navigating to second page.
-        window.testRunner.display();
-        window.location = 'resources/gesture-tapHighlight-simple-navigate-destination.html';
+        runAfterDisplay(function() {
+            window.location = 'resources/gesture-tapHighlight-simple-navigate-destination.html';
+            runAfterDisplay(function() {
+                testRunner.notifyDone();
+            });
+        });
     } else {
         debug("This test requires DumpRenderTree.");
     }
