--- a/LayoutTests/compositing/iframes/fixed-position-element-in-iframe-enters-viewport-expected.html
+++ b/LayoutTests/compositing/iframes/fixed-position-element-in-iframe-enters-viewport-expected.html
@@ -8,20 +8,8 @@
             height: 100px;
         }
     </style>
-    <script>
-        if (window.testRunner)
-            testRunner.waitUntilDone();
-
-        function runTest()
-        {
-            if (window.testRunner) {
-                testRunner.display();
-                testRunner.notifyDone();
-            }
-        }
-    </script>
 </head>
-<body onload="runTest()">
+<body>
     <div id="iframe-containing-fixed-position-element"></div>
 </body>
 </html>
