--- a/LayoutTests/compositing/video/video-with-invalid-source.html
+++ b/LayoutTests/compositing/video/video-with-invalid-source.html
@@ -1,4 +1,5 @@
 <!DOCTYPE html>
+<script src="../../resources/run-after-display.js"></script>
 <script>
 if (window.testRunner) {
     testRunner.waitUntilDone();
@@ -13,10 +14,11 @@ function test() {
     v.appendChild(src);
     src.addEventListener("error", function() {
        if (window.testRunner) {
-            testRunner.display();
-            // If we didn't crash here, yay!  Test is a success
-            document.body.appendChild(document.createTextNode("PASS"));
-            testRunner.notifyDone();
+            runAfterDisplay(function() {
+                // If we didn't crash here, yay!  Test is a success
+                document.body.appendChild(document.createTextNode("PASS"));
+                testRunner.notifyDone();
+            });
         }
     }, false);
 }
